--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,15 @@
   color: black;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
